[package]
name = "tokio-beat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cron = "0.12.0"
chrono = { version = "~0.4", default-features = false, features = ["clock"] }
tokio = { version = "1.20.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"